Delete vertical flex layout for body = correct overlap

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
     color: var(--font-color);
     background-color: var(--white);
     padding: 0 10%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 header {
@@ -37,7 +37,7 @@ header {
     padding: 2rem;
     position: relative;
     z-index: 2;
-
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 button {
@@ -62,7 +62,9 @@ main {
     padding-top: 4rem;
     padding: 4rem 2em 2em 2em;
     z-index: 1;
-    /* bottom: 2rem; */
+    height: calc(100vh - 7rem);
+    border-radius: 0 0 2rem 2rem;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .card {
@@ -76,11 +78,13 @@ main {
 }
 
 footer {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
     bottom: 0;
     width: 80%;
-    background-color: var(--white);
-    padding: 1rem;
+    height: 3rem;
+    /* padding: 1rem; */
     text-align: center;
-    top: -2rem;
 }
